--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       const skipBtn = document.getElementById("skip-btn");
       skipBtn.style.display = "block";
 
-      // Redirection après 5 secondes
+      // Redirection après 5 secondes vers la version française ou espagnole
       setTimeout(() => {
         if (lang === 'fr') {
           window.location.href = "accueil_fr.html"; // Rediriger vers la version française
