--- a/index_es.html
+++ b/index_es.html
@@ -89,7 +89,7 @@ const timer = setInterval(() => {
 // Bouton langue
 const langBtn = document.getElementById('langBtn');
 langBtn.addEventListener('click', () => {
-  window.location.href = "index_fr.html"; // Redirige vers la version française
+  window.location.href = "index.html"; // Redirige vers la version française
 });
 </script>
 </body>
