--- a/competencias_es.html
+++ b/competencias_es.html
@@ -127,8 +127,9 @@ body.dark footer { border-color: #333; }
         <div class="card"><h3>Programación</h3><p>Varios lenguajes de programación (HTML, CSS, JavaScript, C/C++)</p></div>
         <div class="card"><h3>Trabajo manual</h3><p>Reparación de teléfonos y mantenimiento de dispositivos electrónicos</p></div>
         <div class="card"><h3>Música</h3><p>Creo pequeñas producciones y sé utilizar algunos programas.</p></div>
-        <div class="card"><h3>UI/UX Design</h3><p>Interfaces elegantes y experiencia de usuario fluida.</p></div>
-    </div>
+        <div class="card"><h3>Bilingüe</h3><p>Hablo español con fluidez, por lo que puedo crear sitios en español.</p>
+</div>
+
 </main>
 
 <footer>© 2025 Lucas Lara Peyrière – Todos los derechos reservados</footer>
