--- a/index.html
+++ b/index.html
@@ -62,9 +62,11 @@
       <hr class="w3-border-grey" style="margin:auto;width:40%">
       <div id="countdown" class="countdown-box">Chargement...</div>
       <div id="loading-msg" class="countdown-box" style="display:none; margin-top:20px;"></div>
-      
-      <!-- Bouton invisible qui redirige directement vers accueil_es.html -->
-      <button id="portfolioBtn" class="invisible-btn">Accéder au portfolio</button>
+
+      <!-- Bouton invisible sous le compteur -->
+      <div id="skip-btn" style="margin-top:20px;">
+        <button id="portfolioBtn" class="invisible-btn">Accéder au portfolio</button>
+      </div>
     </div>
   </div>
 
